--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.home{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  background-color: aquamarine;
+  height:100vh;
+  width:100vw;
+}
