--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* max-width: 100vw; */
+  overflow-x: hidden;
 }
 
 code {
@@ -15,8 +17,42 @@ code {
 .home{
   display: flex;
   flex-direction: row;
-  justify-content: center;
-  background-color: aquamarine;
+  justify-content: space-evenly;
+  align-items: center;
+  /* background-color: aquamarine; */
   height:100vh;
   width:100vw;
+}
+.homeleft{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  /* background-color: azure; */
+  height:100vh;
+  width:50vw;
+}
+.homeright{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  /* background-color: blueviolet; */
+  height:100vh;
+  width:50vw;
+}
+.tilt {
+  -webkit-transition: all 0.5s ease;
+     -moz-transition: all 0.5s ease;
+       -o-transition: all 0.5s ease;
+      -ms-transition: all 0.5s ease;
+          transition: all 0.5s ease;
+}
+ 
+.tilt:hover {
+  -webkit-transform: rotate(-10deg);
+     -moz-transform: rotate(-10deg);
+       -o-transform: rotate(-10deg);
+      -ms-transform: rotate(-10deg);
+          transform: rotate(-10deg);
 }
