--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,28 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.cards {
+  width:100%;
+  height:auto;
+}
+.card__img{
+ width:100%;
+ height: 235px;
+ border-top-left-radius: 12px;
+ border-top-right-radius: 12px;
+}
+.card{
+ margin: 6%;
+ transition: all 0.4s cubic-bezier(0.175, 0.885,0,1);
+ background-color: #fff;
+ width: 21.25%;
+ border-radius: 12px;
+ box-shadow: 0px 13px 10px -7px rgba(0,0 ,0,0.1);
+ float:left;
+}
+
+.card:hover{
+ box-shadow:0px 30px 18px -8px rgba(0,0,0,0.1);
+ transform: scale(1.05,1.05);
+}
