--- a/src/components/contact.css
+++ b/src/components/contact.css
@@ -1,3 +1,23 @@
+.lead{
+    text-align: center;
+    font-size: xx-large;
+    padding: 20px;
+    color: #4285F4;
+}
+
+.contact-map{
+    padding-top: 8px;
+    padding-bottom: 15px;
+}
+
+.contact-icon{
+    color: #4285F4;
+}
+
+.contact-text{
+    font-size: medium;
+}
+
 .contact-form{
     padding: 8px;
 }
@@ -5,4 +25,17 @@
 .contact-form-box{
     border-width: 1px;
     border-color: #4285F4;
+}
+
+.contact-button{
+    margin: 8px;
+    background-color: #4285F4;
+}
+
+.class-socials{
+    margin-top: 50px;
+}
+
+.a-socials{
+    margin: 5px;
 }
