--- a/src/components/contact.css
+++ b/src/components/contact.css
@@ -2,6 +2,10 @@
     text-align: center;
     font-size: xx-large;
     padding: 20px;
+    font-weight: 400;
+}
+
+.contact-h{
     color: #4285F4;
 }
 
@@ -54,7 +58,7 @@
     color: black;
 }
 
-small{
+.end{
     color: grey;
-    padding-bottom: 80px;
+    padding-bottom: 100px;
 }
