--- a/src/components/About.css
+++ b/src/components/About.css
@@ -1,10 +1,5 @@
-h3{
-    color: #34a853 !important;
-    padding-top: 50px;
-}
-
 Container{
-    margin:10px;
+    margin: 10px;
 }
 
 .about{
@@ -23,13 +18,15 @@ Container{
 }
 
 .umit{
-    
-    /* height: 25rem;
-    padding-left: 20px;  */
     max-height: 300px;
-    
+    width: auto;
 }
+
 .lead{
     font-size: x-large;
-    font-weight: bolder;
+    font-weight: 500;
+}
+
+.about-h{
+    color: #34A853;
 }
