--- a/src/App.css
+++ b/src/App.css
@@ -39,11 +39,13 @@
     }
 
     .whatsapp_float {
+        position: fixed;
         width: 40px;
         height: 40px;
         bottom: 20px;
         /* right: 10px; */
         left: 9px;
         font-size: 22px;
+        z-index: 100;
     }
 }
