--- a/src/components/About.css
+++ b/src/components/About.css
@@ -1,10 +1,15 @@
-Container{
-    margin: 10px;
-}
-
 .about{
     max-height: 400px;
     width: auto;
+}
+
+.about-1{
+    margin-top: 80px;
+}
+
+.about-2{
+    margin-top: 80px;
+    margin-bottom: 80px;
 }
 
 @media screen and (max-width: 767px){
