--- a/src/components/contact.css
+++ b/src/components/contact.css
@@ -62,3 +62,9 @@
     color: grey;
     padding-bottom: 100px;
 }
+
+@media screen and (max-width: 767px){
+    .a-socials{
+        margin: 2px;
+    }
+}
