--- a/src/components/Blog.css
+++ b/src/components/Blog.css
@@ -1,30 +1,12 @@
-.blogs{
-    display:flex;
-    justify-content: center;
+.blog{
+  text-align: center;
+  color: #4285F4;
+}
+.blog-card{
+  max-width: 550px;
+  margin-bottom:1.5em;
 }
 
-.card{
-    margin-right: 3em;
- }
-.cardrow1
-{
-    align-items: center;
-    flex-wrap: wrap;
-  justify-content: center;
-  margin-bottom:2em;
-}
 
-.cardrow2
-{
-    align-items: center;
-    flex-wrap: wrap;
-  justify-content: center;
-  margin-bottom:2em;
-}
-.cardrow3
-{
-    align-items: center;
-    flex-wrap: wrap;
-  justify-content: center;
-  margin-bottom:2em;
-}
+
+
