--- a/src/components/Events.css
+++ b/src/components/Events.css
@@ -1,33 +1,44 @@
 .section-title {
-  text-align: center;
-  padding: 30px 0;
-  position: relative;
+  
+  color: #4285F4;
 }
   
 .img-fluid {
-  max-width: 100%;
-  height: auto;
+  /*max-width: 100%;*/
+  height: 25em;
+  padding:2em;
 }
-  
+.alink{
+  text-decoration: none;
+  background-color: #E6F4EA ;
+}
+.alink:hover{
+      text-decoration: underline #4285F4;
+      
+}
+
 .section{
+  font-size:larger;
+  color:#7e7e7e;
   text-align: center;
   position: relative;
 }
-  
+
 .section-subtitle{
   text-align: center;
   padding: -100px 0;
   position: relative;
+  font-size: 1.3em;
 }
 
 .card-secondary:hover{
   box-shadow: 0 40px 60px -20px rgba(12, 5, 62, 0.15);
 }
 
-.events-card {
-  -ms-flex: 1 1 auto;
-  flex: 1 1 auto;
-  min-height: 1px;
-  padding: 1.25rem;
-}
+/*.events-card {
+  /*-ms-flex: 1 1 auto;
+  flex: 1 1 auto;*/
+  /*min-height: 1px;*/
+  /*padding: 3rem;*/
+
 
