--- a/src/components/Events.css
+++ b/src/components/Events.css
@@ -1,5 +1,5 @@
 .section-title {
-  color: #4285F4;
+  color: #EA4335;
 }
   
 .img-fluid {
@@ -7,13 +7,23 @@
   height: auto;
   padding: 2em;
 }
+
+.stay-tuned{
+  margin: auto;
+  max-height: 300px;
+  width: auto;
+  margin-bottom: 50px;
+}
+
 .alink{
   text-decoration: none;
-  background-color: #E6F4EA ;
+  background-color: #ffd8d4 ;
+  color: #EA4335;
 }
 
 .alink:hover{
-  text-decoration: underline #4285F4;  
+  color: #EA4335;
+  text-decoration: underline #EA4335;  
 }
 
 .section{
